Finished Gatsby Tutorial Part 5

--- a/blog/my-first-post.mdx
+++ b/blog/my-first-post.mdx
@@ -1,17 +1,11 @@
-# This is my first blog post
+---
+title: "My First Post"
+date: "2021-07-23"
+---
 
-- my first blog post
-- my first blog post
-- my first blog post
-- my first blog post
-- my first blog post
+This is my first blog post! Isn't it _great_?
+Some of my **favorite** things are:
 
-- my first
-  - blog
-  - post
-    - this is great
-
-```js
-const text = "my first blog post using gatsby";
-console.log(text);
-```
+- Petting dogs
+- Singing
+- Eating potato-based foods
