Add new blog post

--- a/blog/nextjs-basics-1.mdx
+++ b/blog/nextjs-basics-1.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Next.js Basics(1)"
 date: "2021-06-06"
+category: "frontend"
 ---
 
 감사하게도 취업을 준비한지 1달 만에 그래도 원했던 괜찮은 회사에 프론트엔드 엔지니어로 취업을 하게되었다.
