New post and styling

--- a/blog/my-todolist-1.mdx
+++ b/blog/my-todolist-1.mdx
@@ -11,7 +11,7 @@ category: "React"
 어플리케이션: TodoList(v1)
 기능: 1. Todo를 추가한다. 2. Todo를 삭제한다. 3. Todo를 수정한다. 4. 전체 선택할 수 있다.
 
-기술스택 :React, Typescript, dart-sass
+기술스택 :React, Typescrnpmipt, dart-sass
 테스팅: Storybook
 상태관리: Redux toolkit
 배포: AWS, nginx
