Write about blockchain and what I've studied

--- a/blog/my-todolist-1.mdx
+++ b/blog/my-todolist-1.mdx
@@ -18,7 +18,11 @@ category: "React"
 
 ### 디자인 시안
 
-![](https://images.velog.io/images/wonjuny0804/post/559b293b-36df-4c32-98cf-b6ed8aeaf0d2/Desktop%20-%201.png)
+<img
+  src="https://images.velog.io/images/wonjuny0804/post/559b293b-36df-4c32-98cf-b6ed8aeaf0d2/Desktop%20-%201.png"
+  alt="page"
+  style="width:100%"
+/>
 
 디자인 시안도 여러가지 웹을 돌아다니면서 좋은 디자인들도 봤지만, Helevtica Poster의 느낌이 나는 조금은 투박하지만 타이포그래피가 아름답다고 느껴지는 TodoList를 만들기로 했다.
 
