--- a/blog/nextjs-basics-1.mdx
+++ b/blog/nextjs-basics-1.mdx
@@ -23,9 +23,9 @@ category: "frontend"
 
 각각은 다음의 약자이다.
 
-- `CSR(Client Side Rendering)`
-- `SSR(Server Side Rendering)`
-- `SSG(Static Side Generation)`
+- CSR(Client Side Rendering)
+- SSR(Server Side Rendering)
+- SSG(Static Side Generation)
 
 Render라는 영어 말은 여기서 "그리다"라는 뜻으로 쓰이고 의미는 그리는 것, "나타냄"의 의미를 가지고 있다. 따라서 프론트엔드를 얘기할때 "~를 렌더한다"라는 것은 "~를 그린다"로 이해하면 된다.
 
